validator-view: add unmissed-blocks-percentage (#706)
